--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "eaa2c30a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a56c62fa",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2ed0cd8d",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "14         14     Thomas High School   Charter  1635  1043130"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "56cb0105",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fea22840",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "be3f2883",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4ccedf0f",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "14      False        False  False  False   False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "51398ab1",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "[39170 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ee294f5f",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "621e09c9",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
        "14       True         True  True  True    True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2a6bc710",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1002,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8d604c7c",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "8485ffd4",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/27/q3fg0pdx7dg865n4jb1540_m0000gn/T/ipykernel_13973/3289103214.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbudget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/27/q3fg0pdx7dg865n4jb1540_m0000gn/T/ipykernel_4211/3289103214.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbudget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
@@ -1063,68 +1063,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c7e811ef",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (628238862.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/27/q3fg0pdx7dg865n4jb1540_m0000gn/T/ipykernel_13973/628238862.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    school_data_df.\"budget\".dtype\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "school_data_df.\"budget\".dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ff621866",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "school_data_df[\"budget\"].dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ad8ecc1d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Student ID        int64\n",
-       "student_name     object\n",
-       "gender           object\n",
-       "grade            object\n",
-       "school_name      object\n",
-       "reading_score     int64\n",
-       "math_score        int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Determine data types for the student DataFrame.\n",
     "student_data_df.dtypes"
@@ -1132,8 +1094,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3d79a663",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/veronicalobkina/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:6: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bryan Miranda</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Sheena Carter</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>82</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Nicole Baker</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>96</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Michael Roth</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Matthew Greene</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>96</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID     student_name gender grade        school_name  reading_score  \\\n",
+       "0           0     Paul Bradley      M   9th  Huang High School             66   \n",
+       "1           1     Victor Smith      M  12th  Huang High School             94   \n",
+       "2           2  Kevin Rodriguez      M  12th  Huang High School             90   \n",
+       "3           3    Richard Scott      M  12th  Huang High School             67   \n",
+       "4           4       Bonnie Ray      F   9th  Huang High School             97   \n",
+       "5           5    Bryan Miranda      M   9th  Huang High School             94   \n",
+       "6           6    Sheena Carter      F  11th  Huang High School             82   \n",
+       "7           7     Nicole Baker      F  12th  Huang High School             96   \n",
+       "8           8     Michael Roth      M  10th  Huang High School             95   \n",
+       "9           9   Matthew Greene      M  10th  Huang High School             96   \n",
+       "\n",
+       "   math_score  \n",
+       "0          79  \n",
+       "1          61  \n",
+       "2          60  \n",
+       "3          58  \n",
+       "4          84  \n",
+       "5          94  \n",
+       "6          80  \n",
+       "7          69  \n",
+       "8          87  \n",
+       "9          84  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add each prefix and suffix to remove to a list\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \", \"Ms. \", \"Mrs. \", \"Miss \", \" PhD\", \" MD\", \" DDS\", \" DVM\"]\n",
+    "\n",
+    "# Iterate through the words in prefixes_suffixes list and replace them with an empty space\n",
+    "for fixes in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(fixes, \"\")\n",
+    "student_data_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de56550",
    "metadata": {},
    "outputs": [],
    "source": []
