--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -661,8 +661,8 @@
        "      <td>M</td>\n",
        "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -675,8 +675,8 @@
        "      <td>M</td>\n",
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>61.0</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -689,8 +689,8 @@
        "      <td>M</td>\n",
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>60.0</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -703,8 +703,8 @@
        "      <td>M</td>\n",
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -717,8 +717,8 @@
        "      <td>F</td>\n",
        "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>84.0</td>\n",
        "      <td>0</td>\n",
        "      <td>District</td>\n",
        "      <td>2917</td>\n",
@@ -730,21 +730,21 @@
       ],
       "text/plain": [
        "   Student ID     student_name gender grade        school_name  reading_score  \\\n",
-       "0           0     Paul Bradley      M   9th  Huang High School             66   \n",
-       "1           1     Victor Smith      M  12th  Huang High School             94   \n",
-       "2           2  Kevin Rodriguez      M  12th  Huang High School             90   \n",
-       "3           3    Richard Scott      M  12th  Huang High School             67   \n",
-       "4           4       Bonnie Ray      F   9th  Huang High School             97   \n",
+       "0           0     Paul Bradley      M   9th  Huang High School           66.0   \n",
+       "1           1     Victor Smith      M  12th  Huang High School           94.0   \n",
+       "2           2  Kevin Rodriguez      M  12th  Huang High School           90.0   \n",
+       "3           3    Richard Scott      M  12th  Huang High School           67.0   \n",
+       "4           4       Bonnie Ray      F   9th  Huang High School           97.0   \n",
        "\n",
        "   math_score  School ID      type  size   budget  \n",
-       "0          79          0  District  2917  1910635  \n",
-       "1          61          0  District  2917  1910635  \n",
-       "2          60          0  District  2917  1910635  \n",
-       "3          58          0  District  2917  1910635  \n",
-       "4          84          0  District  2917  1910635  "
+       "0        79.0          0  District  2917  1910635  \n",
+       "1        61.0          0  District  2917  1910635  \n",
+       "2        60.0          0  District  2917  1910635  \n",
+       "3        58.0          0  District  2917  1910635  \n",
+       "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,25 +782,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38709\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
-    "\n",
+    "thomas_9th_count = student_data_df.loc[(student_data_df[\"grade\"]== \"9th\")&(student_data_df[\"school_name\"]==\"Thomas High School\")].count()['Student ID']\n",
     "\n",
     "# Get the total student count \n",
     "student_count = school_data_complete_df[\"Student ID\"].count()\n",
     "\n",
     "\n",
     "# Step 2. Subtract the number of students that are in ninth grade at \n",
-    "# Thomas High School from the total student count to get the new total student count.\n"
+    "# Thomas High School from the total student count to get the new total student count.\n",
+    "new_count = student_count - thomas_9th_count\n",
+    "print(new_count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,16 +821,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3. Calculate the passing percentages with the new total student count.\n"
+    "# Step 3. Calculate the passing percentages with the new total student count.\n",
+    "passing_math_percentage = passing_math_count / new_count * 100\n",
+    "passing_reading_percentage =  passing_reading_count / new_count *100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,14 +844,75 @@
     "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
     "\n",
     "\n",
-    "# Step 4.Calculate the overall passing percentage with new total student count.\n"
+    "# Step 4.Calculate the overall passing percentage with new total student count.\n",
+    "overall_passing_percentage = overall_passing_math_reading_count / new_count *100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>81.9</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>64.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00               78.9   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.9           74.8              85.7              64.9  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a DataFrame\n",
     "district_summary_df = pd.DataFrame(\n",
@@ -878,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1076,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1244,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
