--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1348,30 +1348,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93.18568994889267"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. \n"
+    "# Step 9. Calculate the percentage of 10th-12th grade students passing math from Thomas High School. \n",
+    "upper_grades_math = school_data_complete_df.loc[(school_data_complete_df[\"grade\"]!= \"9th\")\n",
+    "                            &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")\n",
+    "                             &(school_data_complete_df[\"math_score\"] >= 70)].count()['Student ID']\n",
+    "math_passing_percentage = upper_grades_math / total_students * 100\n",
+    "math_passing_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97.01873935264055"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School.\n"
+    "# Step 10. Calculate the percentage of 10th-12th grade students passing reading from Thomas High School.\n",
+    "upper_grades_reading = school_data_complete_df.loc[(school_data_complete_df[\"grade\"]!= \"9th\")\n",
+    "                                &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")\n",
+    "                                &(school_data_complete_df[\"reading_score\"] >= 70)].count()['Student ID']\n",
+    "\n",
+    "reading_passing_percentage = upper_grades_reading / total_students * 100\n",
+    "reading_passing_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90.63032367972743"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 11. Calculate the overall passing percentage of 10th-12th grade from Thomas High School. \n",
-    "\n"
+    "per_passing_tenth = school_data_complete_df.loc[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                                            & (school_data_complete_df[\"reading_score\"] >= 70)\n",
+    "                                           &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")\n",
+    "                                            & (school_data_complete_df[\"grade\"]==\"10th\")]\n",
+    "per_passing_eleventh = school_data_complete_df.loc[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                                            & (school_data_complete_df[\"reading_score\"] >= 70)\n",
+    "                                           &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")\n",
+    "                                            & (school_data_complete_df[\"grade\"]==\"11th\")]\n",
+    "per_passing_twelfth = school_data_complete_df.loc[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                                            & (school_data_complete_df[\"reading_score\"] >= 70)\n",
+    "                                           &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")\n",
+    "                                            & (school_data_complete_df[\"grade\"]==\"12th\")]\n",
+    "\n",
+    "total_grades = total_students_passing[\"student_name\"].count()\n",
+    "\n",
+    "overall_passing_percentage =  total_grades / total_students *100\n",
+    "overall_passing_percentage"
    ]
   },
   {
